# rustbox

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
crates/rustbox-agent/: Cargo.toml
crates/rustbox-agent/src/: executor.rs  handler.rs  lib.rs  main.rs  protocol.rs  transport.rs
crates/rustbox-cli/: Cargo.toml
crates/rustbox-cli/src/: lib.rs  main.rs  output.rs
crates/rustbox-cli/src/commands/: connect.rs  exec.rs  files.rs  mod.rs  run.rs  sandbox.rs  snapshot.rs
crates/rustbox-core/: Cargo.toml
crates/rustbox-core/src/: backend.rs  command.rs  error.rs  id.rs  lib.rs  metrics.rs  network.rs  protocol.rs  sandbox.rs
crates/rustbox-daemon/: Cargo.toml
crates/rustbox-daemon/src/: dto.rs  error.rs  lib.rs  main.rs  orchestrator.rs  reaper.rs  state.rs  watchdog.rs
crates/rustbox-daemon/src/routes/: commands.rs  files.rs  mod.rs  sandboxes.rs  settings.rs  snapshots.rs
crates/rustbox-daemon/tests/: api.rs
crates/rustbox-network/: Cargo.toml
crates/rustbox-network/src/: cidr.rs  credential.rs  domain.rs  error.rs  firewall.rs  lib.rs  policy.rs  proxy.rs  proxy_redirect.rs  tls_proxy.rs
crates/rustbox-sdk/: Cargo.toml
crates/rustbox-sdk/src/: client.rs  error.rs  lib.rs  streaming.rs
crates/rustbox-sdk/tests/: integration.rs
crates/rustbox-storage/: Cargo.toml
crates/rustbox-storage/src/: archive.rs  base_image.rs  error.rs  lib.rs  overlay.rs  snapshot.rs
crates/rustbox-vm/: Cargo.toml
crates/rustbox-vm/src/: agent_client.rs  backend.rs  ca_trust.rs  lib.rs  local_backend.rs  mock_backend.rs
crates/rustbox-vm/src/docker/: backend.rs  images.rs  mod.rs  network.rs
crates/rustbox-vm/src/firecracker/: api.rs  backend.rs  mod.rs  network.rs  process.rs
crates/rustbox-vm/src/lima/: backend.rs  manager.rs  mod.rs  ssh.rs
images/: agent-builder.Dockerfile
images/node22/: Dockerfile
images/node24/: Dockerfile
images/python313/: Dockerfile
scripts/: build-rootfs.sh  vm-init.sh
