[package]
name = "rustbox-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustbox-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
