[package]
name = "rustbox-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
rustbox-sdk = { workspace = true }
rustbox-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
