[package]
name = "rustbox-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustboxd"
path = "src/main.rs"

[dependencies]
rustbox-core = { workspace = true }
rustbox-vm = { workspace = true }
rustbox-storage = { workspace = true }
rustbox-network = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
