[package]
name = "rustbox-network"
version.workspace = true
edition.workspace = true

[dependencies]
rustbox-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = "0.26"
rustls = { workspace = true }
rustls-pemfile = "2"
httparse = "1"
