[package]
name = "rustbox-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
rustbox-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rustbox-daemon = { workspace = true }
rustbox-vm = { workspace = true }
rustbox-storage = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
