[package]
name = "rustbox-storage"
version.workspace = true
edition.workspace = true

[dependencies]
rustbox-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
