[package]
name = "rustbox-vm"
version.workspace = true
edition.workspace = true

[dependencies]
rustbox-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
nix = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bollard = { workspace = true }
tokio-stream = { workspace = true }
